--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "website",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.3",
     "@astrojs/mdx": "^3.1.2",
     "@astrojs/preact": "^3.5.0",
     "@astrojs/rss": "^4.0.7",
@@ -22,7 +23,6 @@
     "astro": "^4.11.3",
     "preact": "^10.22.0",
     "tailwindcss": "^3.4.4",
-    "@astrojs/check": "^0.9.3",
     "typescript": "^5.5.4"
   },
   "volta": {
